--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;600;700&family=Quicksand:wght@300;500;700&family=Roboto:wght@400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;600;700&family=Quicksand:wght@300;400;500;700&family=Roboto:wght@400;500&display=swap");
 body {
   margin: 0 auto;
   width: 1440px;
@@ -52,11 +52,11 @@ ul {
           justify-content: flex-end;
   margin: -43px 150px 0px 0px;
 }
-.header img:hover {
-  -webkit-transition-duration: 0.5s;
-          transition-duration: 0.5s;
+.header__links img:hover {
   -webkit-transform: scale(2);
           transform: scale(2);
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
 .header__button {
   display: -webkit-box;
@@ -181,8 +181,8 @@ ul {
 }
 .section__manage h2 {
   font-family: "Quicksand", sans-serif;
-  font-weight: 300;
-  font-size: 48px;
+  font-weight: 400;
+  font-size: 36px;
   color: #3D4F9F;
 }
 .section__manage-info {
@@ -201,6 +201,24 @@ ul {
   border: 15px solid #FFFFFF;
   border-bottom: 25px solid #FFFFFF;
   border-bottom-width: 30px;
+  border-radius: 5%;
+}
+
+.third_img {
+  margin: 365px 0px 0px 1190px;
+  background: #FFFFFF;
+  border: 5px solid #FFFFFF;
+  border-bottom: 15px solid #FFFFFF;
+  border-bottom-width: 15px;
+  border-radius: 5%;
+}
+
+.second_img {
+  margin: 315px 97px 0px 750px;
+  background: #FFFFFF;
+  border: 1px solid #FFFFFF;
+  border-bottom: 15px solid #FFFFFF;
+  border-bottom-width: 20px;
   border-radius: 5%;
 }
 
@@ -224,4 +242,723 @@ ul {
   color: #FFFFFF;
   font-family: "Quicksand", sans-serif;
   font-weight: 700;
+}
+
+.section__about {
+  height: 885px;
+  position: relative;
+}
+.section__about-info p {
+  text-transform: uppercase;
+  color: #3D4F9F;
+  letter-spacing: 0.1em;
+  font-size: 10px;
+  font-family: Roboto;
+  font-weight: 500;
+}
+.section__about h3 {
+  font-family: "Quicksand", sans-serif;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 30px;
+  color: #3D4F9F;
+}
+.section__about-info {
+  position: absolute;
+  top: 20%;
+  text-align: center;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  left: 50%;
+}
+.section__about-svgs {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 100px;
+  margin: 352px 0px 0px 352px;
+  position: absolute;
+}
+.section__about img {
+  border: 25px solid #F1F5FF;
+  border-radius: 40%;
+  cursor: pointer;
+  background: #F1F5FF;
+  margin-left: 30px;
+}
+.section__about-titles {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 430px 0px 0px 381px;
+  position: absolute;
+  color: #4074F8;
+  font-family: "Quicksand", sans-serif;
+  font-weight: 700;
+  gap: 146px;
+}
+.section__about-titles p:nth-child(2) {
+  margin-left: -2px;
+}
+.section__about-titles p:nth-child(4) {
+  margin-left: -50px;
+}
+.section__about-titles p:nth-child(3) {
+  margin-left: -15px;
+}
+.section__about-text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  position: absolute;
+  margin: 490px 0px 0px 348px;
+  text-align: center;
+  gap: 58px;
+  color: #ADB3CB;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 600;
+  font-size: 11px;
+}
+.section__about-text p:nth-child(2) {
+  margin-left: 1px;
+}
+.section__about-text p:nth-child(4) {
+  margin-left: 3px;
+}
+.section__about-text p {
+  width: 140px;
+}
+.section__about-buttons {
+  position: absolute;
+  margin: 671px 0px 0px 545px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 50px;
+}
+.section__about-buttons p {
+  color: #ADB3CB;
+  font-family: "Open Sans", sans-serif;
+  font-size: 11px;
+  line-height: 19px;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+.section__about-buttons input:first-child {
+  background: #FFD7D7;
+  width: 113px;
+  height: 43px;
+  border: none;
+  color: #D43F3F;
+  font-weight: bold;
+  font-size: 13px;
+  line-height: 16px;
+  cursor: pointer;
+}
+.section__about-buttons input:last-child {
+  background: #D2E1FF;
+  width: 113px;
+  height: 43px;
+  border: none;
+  color: #3A79FF;
+  font-weight: bold;
+  font-size: 13px;
+  cursor: pointer;
+  line-height: 16px;
+}
+
+.section__stats {
+  height: 343px;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.section__stats-backleft {
+  width: 50%;
+  height: 342px;
+  background: linear-gradient(229.32deg, #6888FF 12.77%, #5E80FF 73.11%);
+  position: relative;
+}
+.section__stats-backright {
+  width: 50%;
+  height: 342px;
+  background: linear-gradient(101.48deg, #E9EFFF 41.56%, #E0E9FF 81.53%);
+  position: relative;
+}
+.section__stats-left {
+  width: 260px;
+  text-align: right;
+  line-height: 23px;
+  letter-spacing: 0.03em;
+  margin: 50px 0px 0px 350px;
+}
+.section__stats-right {
+  width: 260px;
+  line-height: 23px;
+  letter-spacing: 0.03em;
+  margin: 50px 0px 0px 105px;
+}
+.section__stats-right p {
+  color: #5E80FF;
+  font-weight: 400;
+  font-family: "Quicksand", sans-serif;
+  font-size: 48px;
+}
+.section__stats-right p:last-child {
+  font-weight: 500;
+  font-size: 18px;
+  font-family: "Quicksand", sans-serif;
+}
+.section__stats-left p {
+  color: #FFFFFF;
+  font-weight: 400;
+  font-family: "Quicksand", sans-serif;
+  font-size: 48px;
+}
+.section__stats-left p:last-child {
+  font-weight: 500;
+  font-size: 18px;
+  font-family: "Quicksand", sans-serif;
+}
+
+.section__slider {
+  height: 865px;
+  position: relative;
+  background: #F5F8FF;
+}
+.section__slider-wrapper {
+  width: 960px;
+  height: 394px;
+  margin: 258px 0px 0px 250px;
+  position: absolute;
+}
+.section__slider-wrapper img {
+  width: 500px;
+  height: 400px;
+}
+.section__slider-inf p {
+  text-transform: uppercase;
+  color: #3D4F9F;
+  letter-spacing: 0.1em;
+  font-size: 10px;
+  font-family: Roboto;
+  font-weight: 500;
+}
+.section__slider h3 {
+  font-family: "Quicksand", sans-serif;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 30px;
+  color: #3D4F9F;
+}
+.section__slider-inf {
+  text-align: center;
+  position: absolute;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  left: 50%;
+  margin-top: 105px;
+}
+.section__slider-wrappersec {
+  position: absolute;
+  margin-top: 258px;
+  left: 50%;
+  background: #FFFFFF;
+  border-top: 25px solid #FFFFFF;
+  border-right: 60px solid #FFFFFF;
+  border-bottom: 95px solid #FFFFFF;
+}
+.section__slider-wrappersec p:first-child {
+  font-family: "Quicksand", sans-serif;
+  font-weight: 400;
+  font-size: 36px;
+  color: #3D4F9F;
+}
+.section__slider-wrappersec p:nth-child(2) {
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  line-height: 27px;
+  letter-spacing: 0.03em;
+  color: #8D96BD;
+  width: 408px;
+}
+.section__slider-wrappersec input {
+  cursor: pointer;
+  width: 113px;
+  height: 43px;
+  background: #D2E1FF;
+  border: none;
+  border-radius: 2px;
+  color: #3A79FF;
+  font-family: "Quicksand", sans-serif;
+  font-weight: 700;
+}
+.section__slider-wrappersec input:last-child {
+  background: #FFFFFF;
+  border: none;
+  width: 211px;
+  height: 43px;
+  color: #A6B6DA;
+  margin-left: 8px;
+}
+.section__slider-dots {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: absolute;
+  top: 85%;
+  left: 47%;
+  gap: 15px;
+}
+
+.strela_first {
+  position: absolute;
+  left: 10%;
+  top: 50%;
+  cursor: pointer;
+}
+
+.strela_sec {
+  position: absolute;
+  right: 10%;
+  top: 50%;
+  cursor: pointer;
+}
+
+.dot {
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: #D1D6E3;
+  cursor: pointer;
+}
+.dot.active {
+  background-color: #5283FF;
+}
+
+.section__quotes {
+  height: 480px;
+  background: -webkit-gradient(linear, left top, left bottom, from(#EAF0FF), to(#F6F9FF));
+  background: linear-gradient(180deg, #EAF0FF 0%, #F6F9FF 100%);
+  position: relative;
+}
+.section__quotes-inf {
+  position: absolute;
+  top: 30%;
+  left: 20%;
+}
+.section__quotes-inf p {
+  text-transform: uppercase;
+  color: #3D4F9F;
+  letter-spacing: 0.1em;
+  font-size: 10px;
+  font-family: Roboto;
+  font-weight: 500;
+}
+.section__quotes h3 {
+  font-family: "Quicksand", sans-serif;
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 20px;
+  color: #3D4F9F;
+}
+.section__quotes-inf p:last-child {
+  font-family: "Open Sans", sans-serif;
+  line-height: 23px;
+  letter-spacing: 0.03em;
+  color: #A4ABC8;
+  font-weight: 600;
+  font-size: 12px;
+  text-transform: none;
+  width: 60%;
+}
+.section__quotes-quot {
+  position: absolute;
+  left: 52%;
+  top: 25%;
+  border: 20px solid #FFFFFF;
+  border-left: 60px solid #FFFFFF;
+  border-right: 60px solid #FFFFFF;
+  background-color: #FFFFFF;
+  letter-spacing: 0.03em;
+  -webkit-filter: drop-shadow(0px 15px 50px #D4DCF1);
+          filter: drop-shadow(0px 15px 50px #D4DCF1);
+  color: #676F95;
+  width: 20%;
+}
+.section__quotes-dots {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: absolute;
+  top: 75%;
+  left: 60%;
+  gap: 15px;
+}
+.section__quotes img {
+  left: 64%;
+  top: 50%;
+  position: absolute;
+  border-radius: 50%;
+}
+
+.dot_sec {
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: #D1D6E3;
+  cursor: pointer;
+}
+.dot_sec.active {
+  background-color: #5283FF;
+}
+
+.section__questions {
+  height: 970px;
+  position: relative;
+}
+.section__questions-inf p {
+  text-transform: uppercase;
+  color: #3D4F9F;
+  letter-spacing: 0.1em;
+  font-size: 10px;
+  font-family: Roboto;
+  font-weight: 500;
+}
+.section__questions h3 {
+  font-family: "Quicksand", sans-serif;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 30px;
+  color: #3D4F9F;
+}
+.section__questions-mainblock p {
+  font-family: "Quicksand", sans-serif;
+  font-weight: 500;
+  font-size: 15px;
+  letter-spacing: 0.03em;
+  color: #8E96B7;
+}
+.section__questions-inf {
+  position: absolute;
+  top: 20%;
+  text-align: center;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  left: 50%;
+}
+.section__questions-block1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 20px;
+  border-bottom: 1px solid #D8E3FE;
+  line-height: 30px;
+}
+.section__questions-block2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 20px;
+  border-bottom: 1px solid #D8E3FE;
+  line-height: 30px;
+}
+.section__questions-block3 {
+  gap: 20px;
+  border-bottom: 1px solid #D8E3FE;
+  line-height: 30px;
+  height: 200px;
+}
+.section__questions-block3 p:last-child {
+  color: #495274;
+  font-weight: bold;
+}
+.section__questions-block3 p:first-child {
+  left: 7%;
+  position: absolute;
+  font-size: 14px;
+  line-height: 27px;
+  letter-spacing: 0.03em;
+  font-family: "Roboto", sans-serif;
+  font-weight: normal;
+  width: 52%;
+}
+.section__questions-block4fix {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 70%;
+}
+.section__questions-block3fix {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 20px;
+}
+.section__questions-block4 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 20px;
+  border-bottom: 1px solid #D8E3FE;
+  line-height: 30px;
+}
+.section__questions-block5 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 20px;
+  border-bottom: 1px solid #D8E3FE;
+  line-height: 30px;
+}
+.section__questions img {
+  cursor: pointer;
+}
+.section__questions-mainblock {
+  width: 54%;
+  position: absolute;
+  top: 35%;
+  left: 25%;
+}
+.section__questions input {
+  cursor: pointer;
+  left: 73%;
+  top: 46%;
+  position: absolute;
+  color: #7382A3;
+  background: #E8ECF4;
+  border: none;
+  width: 195px;
+  height: 43px;
+}
+
+.section__started {
+  position: relative;
+  height: 450px;
+  background: linear-gradient(229.32deg, #6888FF 12.77%, #5E80FF 73.11%);
+}
+.section__started-inf {
+  top: 20%;
+  text-align: center;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  left: 50%;
+  position: absolute;
+  line-height: 10px;
+}
+.section__started-inf p {
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  font-size: 10px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  color: #FFFFFF;
+}
+.section__started-inf p:nth-child(3) {
+  text-transform: none;
+  font-family: "Roboto", sans-serif;
+  font-size: 15px;
+  line-height: 29px;
+  letter-spacing: 0.03em;
+  font-weight: normal;
+  width: 95%;
+}
+.section__started h2 {
+  font-family: "Quicksand", sans-serif;
+  font-weight: 300;
+  font-size: 48px;
+  color: #FFFFFF;
+}
+.section__started span {
+  font-weight: 500;
+}
+.section__started-inf input:last-child {
+  margin-top: 3rem;
+  color: #C7D3FF;
+  font-family: "Quicksand", sans-serif;
+  font-weight: normal;
+  width: 155px;
+  height: 43px;
+  border: 1px solid #C7D3FF;
+  background: inherit;
+  cursor: pointer;
+}
+.section__started-inf input {
+  margin-top: 3rem;
+  color: #565F82;
+  width: 130px;
+  height: 43px;
+  cursor: pointer;
+  border: 1px solid #C7D3FF;
+  font-family: "Quicksand", sans-serif;
+  font-weight: bold;
+}
+
+.section__sign {
+  height: 332px;
+  position: relative;
+  background: #FCFDFF;
+  border-bottom: 1px solid #D4DCF1;
+}
+.section__sign-inf {
+  position: absolute;
+  left: 20%;
+  top: 28%;
+}
+.section__sign-inf p {
+  font-size: 14px;
+  line-height: 27px;
+  letter-spacing: 0.03em;
+  font-family: "Roboto", sans-serif;
+  color: #8D96BD;
+  width: 60%;
+}
+.section__sign h3 {
+  color: #3D4F9F;
+  font-family: "Quicksand", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+}
+.section__sign-inputs {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 0.5rem;
+  position: absolute;
+  left: 48%;
+  top: 40%;
+}
+.section__sign-inputs input:last-child {
+  width: 184px;
+  height: 59px;
+  background: #4D6CE1;
+  -webkit-box-shadow: 0px 5px 15px rgba(116, 104, 255, 0.2);
+          box-shadow: 0px 5px 15px rgba(116, 104, 255, 0.2);
+  border-radius: 5px;
+  color: #FFFFFF;
+  font-family: "Quicksand", sans-serif;
+  border: none;
+  font-weight: bold;
+  font-size: 13px;
+  cursor: pointer;
+}
+.section__sign-inputs input {
+  width: 279px;
+  border: none;
+  background: #EFEFF7;
+  border-radius: 5px;
+}
+.section__sign input::-webkit-input-placeholder {
+  color: #7A85AD;
+  font-weight: bold;
+  font-size: 13px;
+  font-family: "Quicksand", sans-serif;
+  padding-left: 15px;
+}
+.section__sign input::-moz-placeholder {
+  color: #7A85AD;
+  font-weight: bold;
+  font-size: 13px;
+  font-family: "Quicksand", sans-serif;
+  padding-left: 15px;
+}
+.section__sign input:-ms-input-placeholder {
+  color: #7A85AD;
+  font-weight: bold;
+  font-size: 13px;
+  font-family: "Quicksand", sans-serif;
+  padding-left: 15px;
+}
+.section__sign input::-ms-input-placeholder {
+  color: #7A85AD;
+  font-weight: bold;
+  font-size: 13px;
+  font-family: "Quicksand", sans-serif;
+  padding-left: 15px;
+}
+.section__sign input::placeholder {
+  color: #7A85AD;
+  font-weight: bold;
+  font-size: 13px;
+  font-family: "Quicksand", sans-serif;
+  padding-left: 15px;
+}
+
+.footer {
+  height: 287px;
+  position: relative;
+}
+.footer-container {
+  height: 43px;
+}
+.footer-navi img {
+  position: absolute;
+  border-radius: 50%;
+  left: 10%;
+  top: 33%;
+  cursor: pointer;
+}
+.footer-navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 40px;
+  font-family: "Quicksand", sans-serif;
+  cursor: pointer;
+  position: absolute;
+  left: 15%;
+  top: 30%;
+}
+.footer ul {
+  color: #697CA6;
+  letter-spacing: 0.05em;
+  font-weight: 500;
+  font-size: 12px;
+}
+.footer-links {
+  gap: 37px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  left: 70%;
+  top: 35%;
+  position: absolute;
+}
+.footer-links img:hover {
+  -webkit-transform: scale(2);
+          transform: scale(2);
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+.footer-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: #3A79FF;
+  font-size: 13px;
+  left: 85%;
+  top: 30%;
+  position: absolute;
+}
+.footer input {
+  background-color: #D2E1FF;
+  color: #3A79FF;
+  width: 113px;
+  height: 43px;
+  border: none;
+  cursor: pointer;
+}
+
+.copyright {
+  position: absolute;
+  left: 82%;
+  top: 80%;
+  color: #AEB8D0;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 12px;
 }
