--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;600;700&family=Quicksand:wght@300;500;700&family=Roboto:wght@400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;600;700&family=Quicksand:wght@300;400;500;700&family=Roboto:wght@400;500&display=swap');
 
 $fontquick: 'Quicksand', sans-serif;
 $fontsans: 'Open Sans', sans-serif;
@@ -52,9 +52,9 @@ ul {
             justify-content: flex-end;
             margin: -43px 150px 0px 0px;
         }
-        img:hover {
-            transition-duration: 0.5s;
-            transform: scale(2);  
+        &__links img:hover {
+            transform: scale(2);
+            transition: all 0.5s ease;
         }
         &__button {
             display: flex;
@@ -165,11 +165,12 @@ ul {
     }
     span {
         font-weight: 500;
+        
     }
     h2 {
         font-family: $fontquick;
-        font-weight: 300;
-        font-size: 48px;
+        font-weight: 400;
+        font-size: 36px;
         color: #3D4F9F;
     }
     &-info {
@@ -190,6 +191,24 @@ ul {
         border-bottom-width: 30px;
         border-radius: 5%;
     }
+}
+
+.third_img {
+    margin: 365px 0px 0px 1190px;
+    background: #FFFFFF;
+        border: 5px solid #FFFFFF;
+        border-bottom: 15px solid #FFFFFF;
+        border-bottom-width: 15px;
+        border-radius: 5%;  
+}
+
+.second_img {
+    margin: 315px 97px 0px 750px;
+    background: #FFFFFF;
+        border: 1px solid #FFFFFF;
+        border-bottom: 15px solid #FFFFFF;
+        border-bottom-width: 20px;
+        border-radius: 5%;  
 }
 
 .button_2 {
@@ -214,3 +233,654 @@ ul {
     font-weight: 700;
 }
 
+.section__about {
+    height: 885px;
+    position: relative;
+    &-info p {
+        text-transform: uppercase;
+        color: $darkblue;
+        letter-spacing: 0.1em;
+        font-size: 10px;
+        font-family: Roboto;
+        font-weight: 500;
+    }
+    h3 {
+        font-family: $fontquick;
+        font-weight: 500;
+        font-size: 24px;
+        line-height: 30px;
+        color: $darkblue;
+    }
+    &-info {
+        position: absolute;
+        top: 20%;
+        text-align: center;
+        transform: translateX(-50%);
+        left: 50%;
+    }
+    &-svgs {
+        display: flex;
+        gap: 100px; 
+        margin: 352px 0px 0px 352px;
+        position: absolute;
+    }
+    img {
+        border: 25px solid #F1F5FF;
+        border-radius: 40%;
+        cursor: pointer;
+        background: #F1F5FF;
+        margin-left: 30px;
+    }
+    &-titles {
+        display: flex;
+        margin: 430px 0px 0px 381px;
+        position: absolute;
+        color: #4074F8;
+        font-family: $fontquick;
+        font-weight: 700;
+        gap: 146px;
+    }
+    &-titles p:nth-child(2) {
+        margin-left: -2px;
+    }
+    &-titles p:nth-child(4) {
+        margin-left: -50px;
+    }
+    &-titles p:nth-child(3) {
+        margin-left: -15px;
+    }
+    &-text {
+        display: flex;
+        justify-content: space-between;
+        position: absolute;
+        margin: 490px 0px 0px 348px;
+        text-align: center;  
+        gap: 58px;
+        color: #ADB3CB;
+        font-family: $fontsans;
+        font-weight: 600;
+        font-size: 11px;
+    }
+    &-text p:nth-child(2) {
+        margin-left: 1px;
+    }
+    &-text p:nth-child(4) {
+        margin-left: 3px;
+    }
+    &-text p {
+        width: 140px;
+    }
+    &-buttons {
+        position: absolute;
+        margin: 671px 0px 0px 545px;
+        display: flex;
+        gap: 50px;
+    }
+    &-buttons p {
+        color: #ADB3CB;
+        font-family: $fontsans;
+        font-size: 11px;
+        line-height: 19px;
+        font-weight: 600;
+        text-transform: uppercase; 
+    }
+    &-buttons input:first-child {
+        background: #FFD7D7;
+        width: 113px;
+        height: 43px;
+        border: none;
+        color: #D43F3F;
+        font-weight: bold;
+        font-size: 13px;
+        line-height: 16px;
+        cursor: pointer;
+
+    }
+    &-buttons input:last-child {
+        background: #D2E1FF;
+        width: 113px;
+        height: 43px;
+        border: none;
+        color: $blue;
+        font-weight: bold;
+        font-size: 13px;
+        cursor: pointer;
+        line-height: 16px;
+    }
+}
+
+.section__stats {
+    height: 343px;
+    position: relative;
+    display: flex;
+    &-backleft {
+        width: 50%;
+        height: 342px;
+        background: linear-gradient(229.32deg, #6888FF 12.77%, #5E80FF 73.11%);
+        position: relative;
+    }
+    &-backright {
+        width: 50%;
+        height: 342px;
+        background: linear-gradient(101.48deg, #E9EFFF 41.56%, #E0E9FF 81.53%);
+        position: relative;
+    }
+    &-left {
+        width: 260px;
+        text-align: right;
+        line-height: 23px;
+        letter-spacing: 0.03em;
+        margin: 50px 0px 0px 350px;
+    }
+    &-right {
+        width: 260px;
+        line-height: 23px;
+        letter-spacing: 0.03em;
+        margin: 50px 0px 0px 105px;
+    }
+    &-right p {
+        color: #5E80FF;
+        font-weight: 400;
+        font-family: $fontquick;
+        font-size: 48px;
+    }
+    &-right p:last-child {
+        font-weight: 500;
+        font-size: 18px;
+        font-family: $fontquick;
+    }
+    &-left p {
+        color: #FFFFFF;
+        font-weight: 400;
+        font-family: $fontquick;
+        font-size: 48px;
+    }
+    &-left p:last-child {
+        font-weight: 500;
+        font-size: 18px;
+        font-family: $fontquick;
+    }
+}
+
+.section__slider {
+    height: 865px;
+    position: relative;
+    background: #F5F8FF;
+    &-wrapper {
+        width: 960px;
+        height: 394px;
+        margin: 258px 0px 0px 250px;
+        position: absolute;
+    }
+    &-wrapper img {
+        width: 500px;
+        height: 400px;
+    }
+    &-inf p {
+        text-transform: uppercase;
+        color: $darkblue;
+        letter-spacing: 0.1em;
+        font-size: 10px;
+        font-family: Roboto;
+        font-weight: 500;
+      
+    }
+    h3 {
+        font-family: $fontquick;
+        font-weight: 500;
+        font-size: 24px;
+        line-height: 30px;
+        color: $darkblue;
+    }
+    &-inf {
+        text-align: center;
+        position: absolute;
+        transform: translateX(-50%);
+        left: 50%;
+        margin-top: 105px;
+    }
+    &-wrappersec {
+        position: absolute;
+        margin-top: 258px;
+        left: 50%;
+        background: #FFFFFF;
+        border-top: 25px solid #FFFFFF;
+        border-right: 60px solid #FFFFFF;
+        border-bottom: 95px solid #FFFFFF;
+    }
+    &-wrappersec p:first-child {
+        font-family: $fontquick;
+        font-weight: 400;
+        font-size: 36px;
+        color:#3D4F9F;
+    }
+    &-wrappersec p:nth-child(2) {
+        font-family: $fontroboto;
+        font-size: 14px;
+        line-height: 27px;
+        letter-spacing: 0.03em;
+        color: #8D96BD;
+        width: 408px;
+    }
+    &-wrappersec input {
+        cursor: pointer;
+        width: 113px;
+        height: 43px;
+        background: #D2E1FF;
+        border: none;
+        border-radius: 2px;
+        color: #3A79FF;
+        font-family: $fontquick;
+        font-weight: 700;
+    }
+    &-wrappersec input:last-child {
+        background: #FFFFFF;
+        border: none;
+        width: 211px;
+        height: 43px;
+        color:#A6B6DA;
+        margin-left: 8px;
+    }
+    &-dots {
+        display: flex;
+        position: absolute;
+        top: 85%;
+        left: 47%;
+        gap: 15px;
+    }
+}
+
+.strela_first {
+    position: absolute;
+    left: 10%;
+    top: 50%;
+    cursor: pointer;
+}
+
+.strela_sec {
+    position: absolute;
+    right: 10%;
+    top: 50%;
+    cursor: pointer;
+}
+
+
+.dot {
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background-color: #D1D6E3;
+    cursor: pointer;
+    &.active {
+        background-color: #5283FF;
+    }
+}
+
+.section__quotes {
+    height: 480px;
+    background: linear-gradient(180deg, #EAF0FF 0%, #F6F9FF 100%);
+    position: relative;
+    &-inf {
+        position: absolute;
+        top: 30%;
+        left: 20%;
+
+    }
+    &-inf p {
+        text-transform: uppercase;
+        color: $darkblue;
+        letter-spacing: 0.1em;
+        font-size: 10px;
+        font-family: Roboto;
+        font-weight: 500;
+    }
+    h3 {
+        font-family: $fontquick;
+        font-weight: 500;
+        font-size: 36px;
+        line-height: 20px;
+        color: $darkblue;
+        
+    }
+    &-inf p:last-child {
+       font-family: $fontsans;
+       line-height: 23px;
+       letter-spacing: 0.03em;
+       color: #A4ABC8;
+       font-weight: 600;
+       font-size: 12px;
+       text-transform: none;
+       width: 60%;
+    }
+    &-quot {
+        position: absolute;
+        left: 52%;
+        top: 25%;
+        border: 20px solid #FFFFFF;
+        border-left: 60px solid #FFFFFF;
+        border-right: 60px solid #FFFFFF;
+        background-color: #FFFFFF;
+        letter-spacing: 0.03em;
+        filter: drop-shadow(0px 15px 50px #D4DCF1);
+        color: #676F95;
+        width: 20%;
+    }  
+    &-dots {
+        display: flex;
+        position: absolute;
+        top: 75%;
+        left: 60%;
+        gap: 15px;
+    }
+    img {
+        left: 64%;
+        top: 50%;
+        position: absolute;
+        border-radius: 50%;
+    }
+}
+
+.dot_sec {
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background-color: #D1D6E3;
+    cursor: pointer;
+    &.active {
+        background-color: #5283FF;
+    }
+}
+
+.section__questions {
+    height: 970px;
+    position: relative;
+    &-inf p {
+        text-transform: uppercase;
+        color: $darkblue;
+        letter-spacing: 0.1em;
+        font-size: 10px;
+        font-family: Roboto;
+        font-weight: 500;
+    }
+    h3 {
+        font-family: $fontquick;
+        font-weight: 500;
+        font-size: 24px;
+        line-height: 30px;
+        color: $darkblue;
+    }
+    &-mainblock p {
+        font-family: $fontquick;
+        font-weight: 500;
+        font-size: 15px;
+        letter-spacing: 0.03em;
+        color: #8E96B7;
+    }
+    &-inf {
+        position: absolute;
+        top: 20%;
+        text-align: center;
+        transform: translateX(-50%);
+        left: 50%;
+    }
+    &-block1{ 
+        display: flex;
+        gap: 20px;
+        border-bottom: 1px solid #D8E3FE;
+        line-height: 30px;
+    }
+    &-block2{ 
+        display: flex;
+        gap: 20px;
+        border-bottom: 1px solid #D8E3FE;
+        line-height: 30px;
+    }
+    &-block3{ 
+        gap: 20px;
+        border-bottom: 1px solid #D8E3FE;
+        line-height: 30px;
+        height: 200px;
+    }
+    &-block3 p:last-child{ 
+        color: #495274;
+        font-weight: bold;
+    }
+    &-block3 p:first-child{ 
+        left: 7%;
+        position: absolute;
+        font-size: 14px;
+        line-height: 27px;
+        letter-spacing: 0.03em; 
+        font-family: $fontroboto;  
+        font-weight: normal; 
+        width: 52%;
+    }
+    &-block4fix {
+        display: flex;
+        width: 70%;
+    }
+    &-block3fix {
+        display: flex;
+        gap: 20px;
+    }
+    &-block4{ 
+        display: flex;
+        gap: 20px;
+        border-bottom: 1px solid #D8E3FE;
+        line-height: 30px;
+    }
+    &-block5{ 
+        display: flex;
+        gap: 20px;
+        border-bottom: 1px solid #D8E3FE;
+        line-height: 30px;
+    }
+    img {
+        cursor: pointer;
+    }
+    &-mainblock {
+        width: 54%;
+        position: absolute;
+        top: 35%;
+        left: 25%;
+    }
+    input {
+        cursor: pointer;
+        left: 73%;
+        top: 46%;
+        position: absolute;
+        color: #7382A3;
+        background: #E8ECF4;
+        border: none;
+        width: 195px;
+        height: 43px;
+
+    }
+}
+
+.section__started {
+    position: relative;
+    height: 450px;
+    background: linear-gradient(229.32deg, #6888FF 12.77%, #5E80FF 73.11%);
+    &-inf {
+        top: 20%;
+        text-align: center;
+        transform: translateX(-50%);
+        left: 50%;
+        position: absolute;
+        line-height: 10px;
+    }
+    &-inf p {
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+        font-size: 10px;
+        font-family: $fontroboto;
+        font-weight: 500;
+        color: #FFFFFF;         
+    }
+    &-inf p:nth-child(3) {
+        text-transform: none;
+        font-family: $fontroboto;
+        font-size: 15px;
+        line-height: 29px;
+        letter-spacing: 0.03em;
+        font-weight: normal;
+        width: 95%;
+    }
+    h2 {
+        font-family: $fontquick;
+        font-weight: 300;
+        font-size: 48px;
+        color: #FFFFFF;
+    }
+    span {
+        font-weight: 500;
+    }
+    &-inf input:last-child {
+        margin-top: 3rem;
+        color: #C7D3FF;
+        font-family: $fontquick;
+        font-weight: normal;
+        width: 155px;
+        height: 43px;
+        border: 1px solid #C7D3FF;
+        background: inherit;
+        cursor: pointer;
+    }
+    &-inf input {
+        margin-top: 3rem;
+        color: #565F82;
+        width: 130px;
+        height: 43px;
+        cursor: pointer;
+        border: 1px solid #C7D3FF;
+        font-family: $fontquick;
+        font-weight: bold;
+    }
+}
+
+.section__sign {
+    height: 332px;
+    position: relative;
+    background: #FCFDFF;
+    border-bottom: 1px solid #D4DCF1;
+    &-inf {
+        position: absolute;
+        left: 20%;
+        top: 28%;
+    }
+    &-inf p {
+        font-size: 14px;
+        line-height: 27px;
+        letter-spacing: 0.03em;
+        font-family: $fontroboto;
+        color: #8D96BD;
+        width: 60%;
+    }
+    h3 {
+        color: $darkblue;
+        font-family: $fontquick;
+        font-weight: 700;
+        font-size: 18px;
+    }
+    &-inputs {
+        display: flex;
+        gap: 0.5rem;
+        position: absolute;
+        left: 48%;
+        top: 40%;
+    }
+    &-inputs input:last-child {
+        width: 184px;
+        height: 59px;
+        background: #4D6CE1;
+        box-shadow: 0px 5px 15px rgba(116, 104, 255, 0.2);
+        border-radius: 5px;
+        color: #FFFFFF;
+        font-family: $fontquick;
+        border: none;
+        font-weight: bold;
+        font-size: 13px;
+        cursor: pointer;
+    }
+    &-inputs input {
+        width: 279px;
+        border: none;  
+        background: #EFEFF7;
+        border-radius: 5px;          
+    }
+    input::placeholder {
+        color: #7A85AD;
+        font-weight: bold;
+        font-size: 13px;
+        font-family: $fontquick;
+        padding-left: 15px;
+    }
+}
+
+.footer {
+    height: 287px;
+    position: relative;
+    &-container {
+        height: 43px;
+    }
+    &-navi img  {
+        position: absolute;
+        border-radius: 50%;
+        left: 10%;
+        top: 33%;
+        cursor: pointer;
+    }
+    &-navigation {
+        display: flex;
+        gap: 40px;
+        font-family: $fontquick;
+        cursor: pointer;
+        position: absolute;
+        left: 15%;
+        top: 30%;
+    }
+    ul {
+        color: #697CA6;
+        letter-spacing: 0.05em;
+        font-weight: 500;
+        font-size: 12px;
+    }
+    &-links {
+        gap: 37px;            
+        display: flex;
+        left: 70%;
+        top: 35%;
+        position: absolute;
+    }
+    &-links img:hover {
+        transform: scale(2);
+        transition: all 0.5s ease;
+    }
+    &-button {
+        display: flex;
+        color: $blue;
+        font-size: 13px;
+        left: 85%;
+        top: 30%;
+        position: absolute;
+    }
+    input {
+        background-color: #D2E1FF;
+        color: $blue;
+        width: 113px;
+        height: 43px;
+        border: none;
+        cursor: pointer;
+    }
+}
+
+.copyright {
+    position: absolute;
+    left: 82%;
+    top: 80%;
+    color: #AEB8D0;
+    font-family: $fontroboto;
+    font-weight: 500;
+    font-size: 12px;        
+}
